--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,37 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <h4 class="card-title">Barra de progreso</h4>
+            <div class="card-body">
+                <div class="progress">
+                    <div class="progress-bar bg-success" role="progressbar" [attr.ariaValuenow]="progress1" aria-valuemin="0" aria-valuemax="100" [style.width]="progress1 + '%'">
+                        <span class="sr-only">{{ progress1 + '%' }} Complete (success)</span>
+                    </div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" [attr.ariaValuenow]="progress2" aria-valuemin="0" aria-valuemax="100" [style.width]="progress2 + '%'">
+                        <span class="sr-only">{{ progress2 + '%' }} Complete</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-booster [title]="'Titulo 1'" [progress]="progress1" (changeProgress)="progress1 = $event"></app-booster>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-booster [title]="'Titulo 2'" [progress]="progress2" (changeProgress)="progress2 = $event"></app-booster>
+            </div>
+        </div>
+    </div>
+</div>
