--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -19,7 +19,7 @@
             <!-- ============================================================== -->
 
 
-            <!-- <router-outlet></router-outlet> -->
+            <router-outlet></router-outlet>
 
             <!-- <div class="row">
                     <div class="col-12">
